; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/libnv/extr_cnvlist.c_cnvlist_take_binary.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/libnv/extr_cnvlist.c_cnvlist_take_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NV_TYPE_BINARY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cnvlist_take_binary(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @nvpair_type(i8* %7)
  %9 = load i64, i64* @NV_TYPE_BINARY, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i64, i64* @NV_TYPE_BINARY, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @nvpair_name(i8* %13)
  %15 = call i32 @nvlist_report_missing(i64 %12, i32 %14)
  br label %16

16:                                               ; preds = %11, %2
  %17 = load i8*, i8** %3, align 8
  %18 = call i32* @nvpair_nvlist(i8* %17)
  store i32* %18, i32** %6, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = load i64*, i64** %4, align 8
  %21 = call i64 @nvpair_get_binary(i8* %19, i64* %20)
  %22 = inttoptr i64 %21 to i8*
  store i8* %22, i8** %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i8*, i8** %3, align 8
  %25 = call i32 @nvlist_remove_nvpair(i32* %23, i8* %24)
  %26 = load i8*, i8** %3, align 8
  %27 = call i32 @nvpair_free_structure(i8* %26)
  %28 = load i8*, i8** %5, align 8
  ret i8* %28
}

declare dso_local i64 @nvpair_type(i8*) #1

declare dso_local i32 @nvlist_report_missing(i64, i32) #1

declare dso_local i32 @nvpair_name(i8*) #1

declare dso_local i32* @nvpair_nvlist(i8*) #1

declare dso_local i64 @nvpair_get_binary(i8*, i64*) #1

declare dso_local i32 @nvlist_remove_nvpair(i32*, i8*) #1

declare dso_local i32 @nvpair_free_structure(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
